removed supervluous div 'transducer text 2' which has the same fields as transducer text 1 and is put into the same behind-the-scenes variable, removed all mentions of Yappy, since Yappy is no longer included in FAdo, further updates for Python 3 compatibility

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -230,3 +230,8 @@ a#others:hover {
 hr {
     border-top: 1px solid black;
 }
+
+.input-span {
+    padding-left: 10px;
+    padding-right: 10px;
+}
